overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
-  overflow: hidden;
 }
 
 /* BUTTON EXTEND */
@@ -167,7 +166,9 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   }
 }
 .main-intro-img {
-  height: calc(100vw - 4rem);
+  height: calc(100vw - 2rem);
+  width: calc(100vw - 2rem);
+  overflow: hidden;
 }
 .main-intro-img img {
   object-fit: cover;
@@ -378,7 +379,6 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
   color: white;
   background-color: #3b3054;
   background-image: url(../images/bg-boost-mobile.svg);
@@ -392,6 +392,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
 .main-invite a {
   font-size: 1.8rem;
   padding: 1rem 3rem;
+  margin: 2rem;
   border-radius: 3rem;
   background-color: #2acfcf;
   font-weight: 700;
