--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,7 +12,6 @@ html {
 body {
     font-size: 1.6rem;
     font-family: $font-default;
-    overflow: hidden; // for the intro hero image 👫
 }
 
 /* BUTTON EXTEND */
