--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -10,7 +10,9 @@
         }
 
         &-img {
-            height: calc(100vw - 4rem); // = width
+            height: calc(100vw - 2rem);
+            width: calc(100vw - 2rem);
+            overflow: hidden;
             img {
                 object-fit: cover;
                 max-height: 100%;               
@@ -256,7 +258,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 2rem;
         color: white;
         background-color: $dark-violet;
         background-image: url(../images/bg-boost-mobile.svg);
@@ -270,6 +271,7 @@
         a {
             font-size: 1.8rem;
             padding: 1rem 3rem;
+            margin: 2rem;
             border-radius: 3rem;
             background-color: $cyan;
             font-weight: $font-bold;
